[package]
name = "ziel"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
itertools = "0.13.0"
ratatui = "0.29.0"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
